# stm32l4-examples

./: .gitignore  Cargo.toml  LICENSE  README.md  memory.x  openocd.cfg  openocd.gdb  register_viewer.py
.cargo/: config.toml
examples/: adc_single.rs  gpio_input.rs  gpio_input_exti.rs  gpio_open_drain.rs  gpio_push_pull.rs  llcc68_demo.rs  lse.rs  rcc_msi_2mhz_blinky.rs  rtc_wkup_blinky.rs  sleeponexit.rs  spi_nrf24l01_tx.rs  spi_sx1278_rx.rs  spi_sx1278_tx.rs  stop2.rs  sx1268_cad.rs  sx1268_cad_test.rs  sx1268_cad_test_2_4symb.rs  sx1278_ack.rs  tim16_opm_blinky.rs  tim6_blinky.rs  usart_dma_double_buffered.rs  usart_gn03_char_match.rs  usart_interrupt_buffered.rs
