[package]
authors = ["Jingwei Ni <ni.jingwei.2210@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32l4-examples"
description = "Example usage of STM32L4 peripherals"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
heapless = "0.8.0"
nrf24l01-commands = "1.1.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[dependencies.stm32l4]
path = "../../stm32-rs-nightlies/stm32l4"
features = ["stm32l4x2"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
